[tool.poetry]
name = "databrowser"
version = "0.26.0"
description = "Quick tool to browse and view data files (json,csv,parquet,more) on local disk and s3"
authors = ["Jacob Verhoeks <jacob.verhoeks@gmail.com>"]
repository = "https://github.com/jverhoeks/databrowser"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
s3fs = {extras = ["boto3"], version = "^2023.3.0"}
s3path = "^0.4.1"
pandas = ">=1.5.2,<3.0.0"
textual = "0.29.0"
pyarrow = ">=5.0.0"
xlrd = "^2.0.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"
black = "^23.1.0"
bandit = "^1.7.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
databrowser = "databrowser.data_browser:run"

[tool.isort]
profile = "black"

[tool.black]
includes = "src"
line-length = 120

[tool.pylint]
#rcfile = "pylintrc"

[tool.pylint.format]
max-line-length = 120

[tool.bandit]
target = ["src"]
skips = ["B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
